Fix: color contrasts for links (#9)
* fix: links contrast

* fix: padding around navlink instead of li

* fix: 404 button focus border

--- a/styles/404.module.scss
+++ b/styles/404.module.scss
@@ -27,6 +27,6 @@
   }
 
   &:focus-visible {
-    box-shadow: 0 0 0 0.3em $color-main-transparent;
+    box-shadow: 0 0 0 0.2em black;
   }
 }
