--- a/styles/components/Navbar.module.scss
+++ b/styles/components/Navbar.module.scss
@@ -5,7 +5,7 @@
   top: 0;
   background-color: white;
   z-index: 2;
-  padding: 0.4em 1em;
+  padding: 0.2em 1em;
   box-shadow: 0 0 4px rgba(black, 0.2);
   display: grid;
   grid-template-columns: 1fr auto 1fr;
@@ -26,8 +26,11 @@
 .nav li {
   list-style: none;
   transition: 150ms;
-  padding: 0.2em 0.6em;
   text-align: center;
+
+  a {
+    padding: 0.4em 0.6em;
+  }
 
   &:hover {
     color: $color-main;
